// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildAppEngineApplicationUsesBucketRelationships should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "kind": "storage#bucket",
            "location": "EUROPE-NORTH1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:31.280Z",
            "updated": "2021-07-20T12:47:31.280Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626785251280,
      "displayName": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "kmsKeyName": undefined,
      "location": "EUROPE-NORTH1",
      "name": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785251280,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-staging-europe-north1-167984947943-oqqo30p7;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-staging-us-central1-167984947943-okmnuod7",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAc=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-staging-us-central1-167984947943-okmnuod7",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "7",
            "name": "dataproc-staging-us-central1-167984947943-okmnuod7",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-staging-us-central1-167984947943-okmnuod7",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:10.911Z",
            "updated": "2021-09-08T17:19:48.039Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626785230911,
      "displayName": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAc=",
      "id": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1631121588039,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-staging-us-central1-167984947943-okmnuod7;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 90,
                  },
                },
              ],
            },
            "location": "EUROPE-NORTH1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:31.407Z",
            "updated": "2021-07-20T12:47:31.407Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626785251407,
      "displayName": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "kmsKeyName": undefined,
      "location": "EUROPE-NORTH1",
      "name": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785251407,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-temp-europe-north1-167984947943-0quq0oz0;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 90,
                  },
                },
              ],
            },
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:10.793Z",
            "updated": "2021-07-20T12:47:10.793Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626785230793,
      "displayName": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785230793,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-temp-us-central1-167984947943-c8nlqeyo;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:gcf-sources-167984947943-us-central1",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cors": [
              {
                "method": [
                  "GET",
                ],
                "origin": [
                  "https://*.cloud.google.com",
                  "https://*.corp.google.com",
                  "https://*.corp.google.com:*",
                ],
              },
            ],
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": true,
                "lockedTime": "2021-08-29T16:26:23.272Z",
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": true,
                "lockedTime": "2021-08-29T16:26:23.272Z",
              },
            },
            "id": "gcf-sources-167984947943-us-central1",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "gcf-sources-167984947943-us-central1",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/gcf-sources-167984947943-us-central1",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:26:23.272Z",
            "updated": "2021-05-31T16:26:23.272Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478383272,
      "displayName": "gcf-sources-167984947943-us-central1",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "gcf-sources-167984947943-us-central1",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "gcf-sources-167984947943-us-central1",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": true,
      "updatedOn": 1622478383272,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/gcf-sources-167984947943-us-central1;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-sink-logging-bucket",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-sink-logging-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v3-sink-logging-bucket",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-sink-logging-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:25:51.614Z",
            "updated": "2021-05-31T16:25:51.614Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478351614,
      "displayName": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1622478351614,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-sink-logging-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-super-secret-stuff",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "defaultEventBasedHold": false,
            "etag": "CAw=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-super-secret-stuff",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "12",
            "name": "j1-gc-integration-dev-v3-super-secret-stuff",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "satisfiesPZS": false,
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-super-secret-stuff",
            "storageClass": "STANDARD",
            "timeCreated": "2021-09-13T22:56:02.534Z",
            "updated": "2021-10-27T18:29:52.571Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1631573762534,
      "displayName": "j1-gc-integration-dev-v3-super-secret-stuff",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAw=",
      "id": "j1-gc-integration-dev-v3-super-secret-stuff",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-super-secret-stuff",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1635359392571,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-super-secret-stuff;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-test-tf-bucket",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAI=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "enforced",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-test-tf-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "2",
            "name": "j1-gc-integration-dev-v3-test-tf-bucket",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-test-tf-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-22T13:15:31.543Z",
            "updated": "2022-02-07T12:41:33.448Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626959731543,
      "displayName": "j1-gc-integration-dev-v3-test-tf-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAI=",
      "id": "j1-gc-integration-dev-v3-test-tf-bucket",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-test-tf-bucket",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1644237693448,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-test-tf-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3.appspot.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v3.appspot.com",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2022-03-16T10:53:36.805Z",
            "updated": "2022-03-16T10:53:36.805Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1647428016805,
      "displayName": "j1-gc-integration-dev-v3.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v3.appspot.com",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3.appspot.com",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1647428016805,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3cloudfunctions",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAU=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3cloudfunctions",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "5",
            "name": "j1-gc-integration-dev-v3cloudfunctions",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3cloudfunctions",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:25:44.251Z",
            "updated": "2021-09-13T17:25:24.390Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478344251,
      "displayName": "j1-gc-integration-dev-v3cloudfunctions",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAU=",
      "id": "j1-gc-integration-dev-v3cloudfunctions",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3cloudfunctions",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1631553924390,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3cloudfunctions;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:staging.j1-gc-integration-dev-v3.appspot.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "staging.j1-gc-integration-dev-v3.appspot.com",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 15,
                  },
                },
              ],
            },
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "staging.j1-gc-integration-dev-v3.appspot.com",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/staging.j1-gc-integration-dev-v3.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2022-03-16T10:53:36.905Z",
            "updated": "2022-03-16T10:53:36.905Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1647428016905,
      "displayName": "staging.j1-gc-integration-dev-v3.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "staging.j1-gc-integration-dev-v3.appspot.com",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "staging.j1-gc-integration-dev-v3.appspot.com",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1647428016905,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/staging.j1-gc-integration-dev-v3.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:35:42.461Z",
            "updated": "2021-05-31T16:35:42.461Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478942461,
      "displayName": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1622478942461,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/us.artifacts.j1-gc-integration-dev-v3.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Application",
      ],
      "_key": "apps/j1-gc-integration-dev-v3",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "authDomain": "gmail.com",
            "codeBucket": "staging.j1-gc-integration-dev-v3.appspot.com",
            "databaseType": "CLOUD_DATASTORE_COMPATIBILITY",
            "defaultBucket": "j1-gc-integration-dev-v3.appspot.com",
            "defaultHostname": "j1-gc-integration-dev-v3.uc.r.appspot.com",
            "featureSettings": {
              "splitHealthChecks": true,
              "useContainerOptimizedOs": true,
            },
            "gcrDomain": "us.gcr.io",
            "id": "j1-gc-integration-dev-v3",
            "locationId": "us-central",
            "name": "apps/j1-gc-integration-dev-v3",
            "serviceAccount": "j1-gc-integration-dev-v3@appspot.gserviceaccount.com",
            "servingStatus": "SERVING",
          },
        },
      ],
      "_type": "google_app_engine_application",
      "authDomain": "gmail.com",
      "codeBucket": "staging.j1-gc-integration-dev-v3.appspot.com",
      "createdOn": undefined,
      "defaultBucket": "j1-gc-integration-dev-v3.appspot.com",
      "defaultHostname": "j1-gc-integration-dev-v3.uc.r.appspot.com",
      "displayName": "apps/j1-gc-integration-dev-v3",
      "grcDomain": "us.gcr.io",
      "id": "j1-gc-integration-dev-v3",
      "location": "us-central",
      "name": "apps/j1-gc-integration-dev-v3",
      "servingStatus": "SERVING",
      "splitHealthChecks": true,
      "useContainerOptimizedOs": true,
      "webLink": "https://console.cloud.google.com/appengine?project=j1-gc-integration-dev-v3",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "USES",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v3",
      "_key": "apps/j1-gc-integration-dev-v3|uses|bucket:j1-gc-integration-dev-v3.appspot.com",
      "_toEntityKey": "bucket:j1-gc-integration-dev-v3.appspot.com",
      "_type": "google_app_engine_application_uses_storage_bucket",
      "displayName": "USES",
    },
    {
      "_class": "USES",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v3",
      "_key": "apps/j1-gc-integration-dev-v3|uses|bucket:staging.j1-gc-integration-dev-v3.appspot.com",
      "_toEntityKey": "bucket:staging.j1-gc-integration-dev-v3.appspot.com",
      "_type": "google_app_engine_application_uses_storage_bucket",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": [
    "google_storage_bucket",
    "google_app_engine_application",
    "google_app_engine_application_uses_storage_bucket",
  ],
  "numCollectedEntities": 13,
  "numCollectedRelationships": 2,
}
`;

exports[`#fetchAppEngineApplication should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Application",
      ],
      "_key": "apps/j1-gc-integration-dev-v3",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "authDomain": "gmail.com",
            "codeBucket": "staging.j1-gc-integration-dev-v3.appspot.com",
            "databaseType": "CLOUD_DATASTORE_COMPATIBILITY",
            "defaultBucket": "j1-gc-integration-dev-v3.appspot.com",
            "defaultHostname": "j1-gc-integration-dev-v3.uc.r.appspot.com",
            "featureSettings": {
              "splitHealthChecks": true,
              "useContainerOptimizedOs": true,
            },
            "gcrDomain": "us.gcr.io",
            "id": "j1-gc-integration-dev-v3",
            "locationId": "us-central",
            "name": "apps/j1-gc-integration-dev-v3",
            "serviceAccount": "j1-gc-integration-dev-v3@appspot.gserviceaccount.com",
            "servingStatus": "SERVING",
          },
        },
      ],
      "_type": "google_app_engine_application",
      "authDomain": "gmail.com",
      "codeBucket": "staging.j1-gc-integration-dev-v3.appspot.com",
      "createdOn": undefined,
      "defaultBucket": "j1-gc-integration-dev-v3.appspot.com",
      "defaultHostname": "j1-gc-integration-dev-v3.uc.r.appspot.com",
      "displayName": "apps/j1-gc-integration-dev-v3",
      "grcDomain": "us.gcr.io",
      "id": "j1-gc-integration-dev-v3",
      "location": "us-central",
      "name": "apps/j1-gc-integration-dev-v3",
      "servingStatus": "SERVING",
      "splitHealthChecks": true,
      "useContainerOptimizedOs": true,
      "webLink": "https://console.cloud.google.com/appengine?project=j1-gc-integration-dev-v3",
    },
  ],
  "collectedRelationships": [],
  "encounteredTypes": [
    "google_app_engine_application",
  ],
  "numCollectedEntities": 1,
  "numCollectedRelationships": 0,
}
`;

exports[`#fetchAppEngineInstances should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Application",
      ],
      "_key": "apps/j1-gc-integration-dev-v2",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "authDomain": "gmail.com",
            "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
            "databaseType": "CLOUD_FIRESTORE",
            "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
            "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
            "featureSettings": {
              "splitHealthChecks": true,
              "useContainerOptimizedOs": true,
            },
            "gcrDomain": "us.gcr.io",
            "id": "j1-gc-integration-dev-v2",
            "locationId": "us-central",
            "name": "apps/j1-gc-integration-dev-v2",
            "servingStatus": "SERVING",
          },
        },
      ],
      "_type": "google_app_engine_application",
      "authDomain": "gmail.com",
      "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
      "createdOn": undefined,
      "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
      "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
      "displayName": "apps/j1-gc-integration-dev-v2",
      "grcDomain": "us.gcr.io",
      "id": "j1-gc-integration-dev-v2",
      "location": "us-central",
      "name": "apps/j1-gc-integration-dev-v2",
      "servingStatus": "SERVING",
      "splitHealthChecks": true,
      "useContainerOptimizedOs": true,
      "webLink": "https://console.cloud.google.com/appengine?project=j1-gc-integration-dev-v2",
    },
    {
      "_class": [
        "Container",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "id": "default",
            "name": "apps/j1-gc-integration-dev-v2/services/default",
            "split": {
              "allocations": {
                "20210319t163820": 1,
              },
            },
          },
        },
      ],
      "_type": "google_app_engine_service",
      "createdOn": undefined,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default",
      "id": "default",
      "name": "apps/j1-gc-integration-dev-v2/services/default",
    },
    {
      "_class": [
        "Service",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-03-09T14:11:25Z",
            "createdBy": "viragsf@gmail.com",
            "diskUsageBytes": "4027054",
            "env": "standard",
            "id": "20210309t141022",
            "instanceClass": "F1",
            "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
            "network": {},
            "runtime": "nodejs14",
            "runtimeChannel": "default",
            "servingStatus": "SERVING",
            "threadsafe": true,
            "versionUrl": "https://20210309t141022-dot-j1-gc-integration-dev-v2.appspot.com",
          },
        },
      ],
      "_type": "google_app_engine_version",
      "category": [
        "application",
      ],
      "cpuCount": undefined,
      "createdBy": "viragsf@gmail.com",
      "createdOn": 1615299085000,
      "diskGb": undefined,
      "diskUsageBytes": 4027054,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "env": "standard",
      "function": [
        "workload-management",
      ],
      "id": "20210309t141022",
      "instanceClass": "F1",
      "livenessCheckFailureThreshold": undefined,
      "livenessCheckInitialDelay": undefined,
      "livenessCheckInterval": undefined,
      "livenessCheckSuccessThreshold": undefined,
      "livenessCheckTimeout": undefined,
      "manualScalingInstances": undefined,
      "memoryGb": undefined,
      "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "readinessCheckAppStartTimeout": undefined,
      "readinessCheckFailureThreshold": undefined,
      "readinessCheckInterval": undefined,
      "readinessCheckSuccessThreshold": undefined,
      "readinessCheckTimeout": undefined,
      "runtime": "nodejs14",
      "servingStatus": "SERVING",
      "threadsafe": true,
      "versionUrl": "https://20210309t141022-dot-j1-gc-integration-dev-v2.appspot.com",
      "webLink": "https://console.cloud.google.com/appengine/versions?serviceId=default&project=j1-gc-integration-dev-v2",
    },
    {
      "_class": [
        "Service",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "betaSettings": {
              "has_docker_image": "true",
              "module_yaml_path": "app.yaml",
              "no_appserver_affinity": "true",
              "use_deployment_manager": "true",
            },
            "createTime": "2021-03-19T15:39:33Z",
            "createdBy": "viragsf@gmail.com",
            "env": "flexible",
            "id": "20210319t163820",
            "livenessCheck": {
              "checkInterval": "30s",
              "failureThreshold": 4,
              "initialDelay": "300s",
              "successThreshold": 2,
              "timeout": "4s",
            },
            "manualScaling": {
              "instances": 1,
            },
            "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
            "network": {},
            "readinessCheck": {
              "appStartTimeout": "300s",
              "checkInterval": "5s",
              "failureThreshold": 2,
              "successThreshold": 2,
              "timeout": "4s",
            },
            "resources": {
              "cpu": 1,
              "diskGb": 10,
              "memoryGb": 0.5,
            },
            "runtime": "nodejs",
            "runtimeApiVersion": "1.0",
            "servingStatus": "SERVING",
            "threadsafe": true,
            "versionUrl": "https://20210319t163820-dot-j1-gc-integration-dev-v2.appspot.com",
          },
        },
      ],
      "_type": "google_app_engine_version",
      "category": [
        "application",
      ],
      "cpuCount": 1,
      "createdBy": "viragsf@gmail.com",
      "createdOn": 1616168373000,
      "diskGb": 10,
      "diskUsageBytes": undefined,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "env": "flexible",
      "function": [
        "workload-management",
      ],
      "id": "20210319t163820",
      "instanceClass": undefined,
      "livenessCheckFailureThreshold": 4,
      "livenessCheckInitialDelay": "300s",
      "livenessCheckInterval": "30s",
      "livenessCheckSuccessThreshold": 2,
      "livenessCheckTimeout": "4s",
      "manualScalingInstances": 1,
      "memoryGb": 0.5,
      "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "readinessCheckAppStartTimeout": "300s",
      "readinessCheckFailureThreshold": 2,
      "readinessCheckInterval": "5s",
      "readinessCheckSuccessThreshold": 2,
      "readinessCheckTimeout": "4s",
      "runtime": "nodejs",
      "servingStatus": "SERVING",
      "threadsafe": true,
      "versionUrl": "https://20210319t163820-dot-j1-gc-integration-dev-v2.appspot.com",
      "webLink": "https://console.cloud.google.com/appengine/versions?serviceId=default&project=j1-gc-integration-dev-v2",
    },
    {
      "_class": [
        "Host",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "id": "aef-default-20210319t163820-mlt8",
            "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
            "startTime": "2021-03-26T17:53:40.236Z",
            "vmIp": "34.70.1.77",
            "vmLiveness": "HEALTHY",
            "vmStatus": "RUNNING",
          },
        },
      ],
      "_type": "google_app_engine_instance",
      "appEngineRelease": undefined,
      "availability": undefined,
      "averageLatency": undefined,
      "createdOn": 1616781220236,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "hostname": null,
      "id": "aef-default-20210319t163820-mlt8",
      "memoryUsage": undefined,
      "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "requests": undefined,
      "vmIp": "34.70.1.77",
      "vmLiveness": "HEALTHY",
      "vmStatus": "RUNNING",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2",
      "_key": "apps/j1-gc-integration-dev-v2|has|apps/j1-gc-integration-dev-v2/services/default",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_type": "google_app_engine_application_has_service",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_key": "apps/j1-gc-integration-dev-v2/services/default|has|apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "_type": "google_app_engine_service_has_version",
      "displayName": "HAS",
    },
    {
      "_class": "CREATED",
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022|created|REVERSE:_type=google_user:email=viragsf@gmail.com",
      "_mapping": {
        "relationshipDirection": "REVERSE",
        "sourceEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
        "targetEntity": {
          "_type": "google_user",
          "email": "viragsf@gmail.com",
          "username": "viragsf@gmail.com",
        },
        "targetFilterKeys": [
          [
            "_type",
            "email",
          ],
        ],
      },
      "_type": "mapping_source_created_google_user",
      "displayName": "CREATED",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_key": "apps/j1-gc-integration-dev-v2/services/default|has|apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_type": "google_app_engine_service_has_version",
      "displayName": "HAS",
    },
    {
      "_class": "CREATED",
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820|created|REVERSE:_type=google_user:email=viragsf@gmail.com",
      "_mapping": {
        "relationshipDirection": "REVERSE",
        "sourceEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
        "targetEntity": {
          "_type": "google_user",
          "email": "viragsf@gmail.com",
          "username": "viragsf@gmail.com",
        },
        "targetFilterKeys": [
          [
            "_type",
            "email",
          ],
        ],
      },
      "_type": "mapping_source_created_google_user",
      "displayName": "CREATED",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820|has|apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "_type": "google_app_engine_version_has_instance",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "google_app_engine_application",
    "google_app_engine_service",
    "google_app_engine_application_has_service",
    "google_app_engine_version",
    "google_app_engine_service_has_version",
    "mapping_source_created_google_user",
    "google_app_engine_instance",
    "google_app_engine_version_has_instance",
  ],
  "numCollectedEntities": 5,
  "numCollectedRelationships": 6,
}
`;

exports[`#fetchAppEngineServices should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Application",
      ],
      "_key": "apps/j1-gc-integration-dev-v2",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "authDomain": "gmail.com",
            "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
            "databaseType": "CLOUD_FIRESTORE",
            "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
            "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
            "featureSettings": {
              "splitHealthChecks": true,
              "useContainerOptimizedOs": true,
            },
            "gcrDomain": "us.gcr.io",
            "id": "j1-gc-integration-dev-v2",
            "locationId": "us-central",
            "name": "apps/j1-gc-integration-dev-v2",
            "servingStatus": "SERVING",
          },
        },
      ],
      "_type": "google_app_engine_application",
      "authDomain": "gmail.com",
      "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
      "createdOn": undefined,
      "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
      "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
      "displayName": "apps/j1-gc-integration-dev-v2",
      "grcDomain": "us.gcr.io",
      "id": "j1-gc-integration-dev-v2",
      "location": "us-central",
      "name": "apps/j1-gc-integration-dev-v2",
      "servingStatus": "SERVING",
      "splitHealthChecks": true,
      "useContainerOptimizedOs": true,
      "webLink": "https://console.cloud.google.com/appengine?project=j1-gc-integration-dev-v2",
    },
    {
      "_class": [
        "Container",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "id": "default",
            "name": "apps/j1-gc-integration-dev-v2/services/default",
            "split": {
              "allocations": {
                "20210319t163820": 1,
              },
            },
          },
        },
      ],
      "_type": "google_app_engine_service",
      "createdOn": undefined,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default",
      "id": "default",
      "name": "apps/j1-gc-integration-dev-v2/services/default",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2",
      "_key": "apps/j1-gc-integration-dev-v2|has|apps/j1-gc-integration-dev-v2/services/default",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_type": "google_app_engine_application_has_service",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "google_app_engine_application",
    "google_app_engine_service",
    "google_app_engine_application_has_service",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchAppEngineVersions should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "kind": "storage#bucket",
            "location": "EUROPE-NORTH1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:31.280Z",
            "updated": "2021-07-20T12:47:31.280Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1626785251280,
      "displayName": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "kmsKeyName": undefined,
      "location": "EUROPE-NORTH1",
      "name": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785251280,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-staging-europe-north1-167984947943-oqqo30p7;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-staging-us-central1-167984947943-okmnuod7",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAc=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-staging-us-central1-167984947943-okmnuod7",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "7",
            "name": "dataproc-staging-us-central1-167984947943-okmnuod7",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-staging-us-central1-167984947943-okmnuod7",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:10.911Z",
            "updated": "2021-09-08T17:19:48.039Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Public to internet",
      "classification": null,
      "createdOn": 1626785230911,
      "displayName": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAc=",
      "id": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1631121588039,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-staging-us-central1-167984947943-okmnuod7;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 90,
                  },
                },
              ],
            },
            "location": "EUROPE-NORTH1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:31.407Z",
            "updated": "2021-07-20T12:47:31.407Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1626785251407,
      "displayName": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "kmsKeyName": undefined,
      "location": "EUROPE-NORTH1",
      "name": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785251407,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-temp-europe-north1-167984947943-0quq0oz0;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 90,
                  },
                },
              ],
            },
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:10.793Z",
            "updated": "2021-07-20T12:47:10.793Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1626785230793,
      "displayName": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785230793,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-temp-us-central1-167984947943-c8nlqeyo;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:gcf-sources-167984947943-us-central1",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cors": [
              {
                "method": [
                  "GET",
                ],
                "origin": [
                  "https://*.cloud.google.com",
                  "https://*.corp.google.com",
                  "https://*.corp.google.com:*",
                ],
              },
            ],
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": true,
                "lockedTime": "2021-08-29T16:26:23.272Z",
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": true,
                "lockedTime": "2021-08-29T16:26:23.272Z",
              },
            },
            "id": "gcf-sources-167984947943-us-central1",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "gcf-sources-167984947943-us-central1",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/gcf-sources-167984947943-us-central1",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:26:23.272Z",
            "updated": "2021-05-31T16:26:23.272Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478383272,
      "displayName": "gcf-sources-167984947943-us-central1",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "gcf-sources-167984947943-us-central1",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "gcf-sources-167984947943-us-central1",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": true,
      "updatedOn": 1622478383272,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/gcf-sources-167984947943-us-central1;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-sink-logging-bucket",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-sink-logging-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v3-sink-logging-bucket",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-sink-logging-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:25:51.614Z",
            "updated": "2021-05-31T16:25:51.614Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1622478351614,
      "displayName": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1622478351614,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-sink-logging-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-super-secret-stuff",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "defaultEventBasedHold": false,
            "etag": "CAw=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-super-secret-stuff",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "12",
            "name": "j1-gc-integration-dev-v3-super-secret-stuff",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "satisfiesPZS": false,
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-super-secret-stuff",
            "storageClass": "STANDARD",
            "timeCreated": "2021-09-13T22:56:02.534Z",
            "updated": "2021-10-27T18:29:52.571Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Public to internet",
      "classification": null,
      "createdOn": 1631573762534,
      "displayName": "j1-gc-integration-dev-v3-super-secret-stuff",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAw=",
      "id": "j1-gc-integration-dev-v3-super-secret-stuff",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-super-secret-stuff",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1635359392571,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-super-secret-stuff;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-test-tf-bucket",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAI=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "enforced",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-test-tf-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "2",
            "name": "j1-gc-integration-dev-v3-test-tf-bucket",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-test-tf-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-22T13:15:31.543Z",
            "updated": "2022-02-07T12:41:33.448Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626959731543,
      "displayName": "j1-gc-integration-dev-v3-test-tf-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAI=",
      "id": "j1-gc-integration-dev-v3-test-tf-bucket",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-test-tf-bucket",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1644237693448,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-test-tf-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3cloudfunctions",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAU=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3cloudfunctions",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "5",
            "name": "j1-gc-integration-dev-v3cloudfunctions",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3cloudfunctions",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:25:44.251Z",
            "updated": "2021-09-13T17:25:24.390Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1622478344251,
      "displayName": "j1-gc-integration-dev-v3cloudfunctions",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAU=",
      "id": "j1-gc-integration-dev-v3cloudfunctions",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3cloudfunctions",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1631553924390,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3cloudfunctions;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:35:42.461Z",
            "updated": "2021-05-31T16:35:42.461Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1622478942461,
      "displayName": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1622478942461,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/us.artifacts.j1-gc-integration-dev-v3.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Application",
      ],
      "_key": "apps/j1-gc-integration-dev-v3",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "authDomain": "gmail.com",
            "databaseType": "CLOUD_DATASTORE_COMPATIBILITY",
            "defaultHostname": "j1-gc-integration-dev-v3.uc.r.appspot.com",
            "featureSettings": {
              "splitHealthChecks": true,
              "useContainerOptimizedOs": true,
            },
            "gcrDomain": "us.gcr.io",
            "id": "j1-gc-integration-dev-v3",
            "locationId": "us-central",
            "name": "apps/j1-gc-integration-dev-v3",
            "serviceAccount": "j1-gc-integration-dev-v3@appspot.gserviceaccount.com",
            "servingStatus": "SERVING",
          },
        },
      ],
      "_type": "google_app_engine_application",
      "authDomain": "gmail.com",
      "codeBucket": undefined,
      "createdOn": undefined,
      "defaultBucket": undefined,
      "defaultHostname": "j1-gc-integration-dev-v3.uc.r.appspot.com",
      "displayName": "apps/j1-gc-integration-dev-v3",
      "grcDomain": "us.gcr.io",
      "id": "j1-gc-integration-dev-v3",
      "location": "us-central",
      "name": "apps/j1-gc-integration-dev-v3",
      "servingStatus": "SERVING",
      "splitHealthChecks": true,
      "useContainerOptimizedOs": true,
      "webLink": "https://console.cloud.google.com/appengine?project=j1-gc-integration-dev-v3",
    },
  ],
  "collectedRelationships": [],
  "encounteredTypes": [
    "google_storage_bucket",
    "google_app_engine_application",
  ],
  "numCollectedEntities": 11,
  "numCollectedRelationships": 0,
}
`;
